# tc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
.conan/profiles/: clang  gcc  msvc
.conan/test_package/: CMakeLists.txt  conanfile.py  test_plugin.cpp
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: build.yml  lint.yml  package.yml  release.yml  sanitizer.yml
app/: CMakeLists.txt
app/src/: main.cpp
crash_reporter/: CMakeLists.txt
crash_reporter/src/: plugin.cpp
include/plugin/: plugin.h
plugin/: CMakeLists.txt
plugin/include/plugin/: plugin.h
plugin/src/: plugin.cpp
plugins/: CMakeLists.txt
plugins/crash_reporter/: CMakeLists.txt
plugins/crash_reporter/src/: plugin.cpp
plugins/plugin/: CMakeLists.txt
plugins/plugin/src/: plugin.cpp
tests/: CMakeLists.txt  plugin_loader.h  test_crash_reporter.cpp  test_crash_reporter_app.cpp  test_plugin.cpp
